--- a/styles.css
+++ b/styles.css
@@ -19,18 +19,98 @@ details {
     display: flex;
     flex-direction: column;
     text-align: center;
-    border: 2px solid #F5C9B0;
+    border: 4px solid #A6B28B;
     width: 45%;
     height: 60%;
     margin: 15px;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 20px;
 }
 summary {
     font-weight: bold;
     font-size: 23px;
 }
 .scores {
+     display: flex;
+     justify-content: space-between;
+     max-width: 400px;
+     margin: 10px auto;
+ }
+.scores p {
+    margin: 0;
+    font-weight: bold;
+}
+.comp-p {
+    padding-left: 160px;
+}
+h2 {
+    font-size: 35px;
+    margin-top: 15px;
+    margin-bottom: 15px;
+}
+.buttons {
     display: inline-flex;
-    flex-direction: row;
-    justify-content: space-between;
-    gap: 100%;
+    gap: 50px;
+}
+button {
+    border: 3px solid #A6B28B;
+    background-color: #1C352D;
+    color: #F9F6F3;
+    padding: 10px 20px;
+    border-radius: 10px;
+    width: 130px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+}
+button:hover {
+    transform: scale(1.15);
+    background-color: #A6B28B;
+    color: #1C352D;
+    border-color: #A6B28B;
+}
+.theme-changer-div {
+     position: absolute;  /* або relative, якщо треба всередині контейнера */
+     bottom: 3%;
+     right: 3%;
+     border-radius: 50%;
+     z-index: 3;
+ }
+
+/* перший шар */
+.first-layer {
+    position: absolute;
+    bottom: 3%;
+    right: 3%;
+    border-radius: 50%;
+    background-color: #A6B28B;
+    z-index: 1;
+    padding: 30px;
+}
+.second-layer {
+    padding: 30px;
+    position: absolute;
+    bottom: 3%;
+    right: 3%;
+    border-radius: 50%;
+    background-color: #F97A00;
+    z-index: 2;
+    transition-duration: 0.2s;
+    transition: transform 0.2s ease;
+    cursor: pointer;
+}
+.second-layer:hover {
+    background: linear-gradient(to right, rgba(249, 122, 0, 0), #F97A00);
+    transform: translateX(15px) rotate(45deg);
+
+}
+/* картинка */
+.theme-changer {
+    position: relative; /* відображається поверх */
+    z-index: 3;
+    width: 50px; /* підлаштуй розмір */
+    height: 50px;
+    bottom: 3%;
+    right: 10%;
+    pointer-events: none;
 }
