--- a/styles.css
+++ b/styles.css
@@ -4,6 +4,9 @@
     box-sizing: border-box;
 }
 body {
+    transition: background 0.3s ease;
+}
+body.dark{
     background: #1C352D;
     color: #F9F6F3;
     display: flex;
@@ -11,11 +14,23 @@ body {
     justify-content: center;
     align-items: center;
 }
+body.light{
+    background: #A6B28B;
+    color: #1C352D;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
 h1 {
+    padding-top: 50px;
     margin: 15px;
     font-size: 55px;
 }
 details {
+    transition: background 0.3s ease;
+}
+details.dark{
     display: flex;
     flex-direction: column;
     text-align: center;
@@ -26,6 +41,20 @@ details {
     cursor: pointer;
     border-radius: 20px;
     padding: 20px;
+    box-shadow: 0 2px 5px rgba(255, 255, 255,0.15);
+}
+details.light{
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    border: 4px solid #1C352D;
+    width: 45%;
+    height: 60%;
+    margin: 15px;
+    cursor: pointer;
+    border-radius: 20px;
+    padding: 20px;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.15);
 }
 summary {
     font-weight: bold;
@@ -54,36 +83,61 @@ h2 {
     gap: 50px;
 }
 button {
+    transition: background 0.3s ease;
+}
+button.dark {
     border: 3px solid #A6B28B;
     background-color: #1C352D;
     color: #F9F6F3;
+    width: 150px;
+    cursor: pointer;
+    transition: transform 0.2s ease;
+    box-shadow: 0 2px 5px rgba(255, 255, 255,0.15);
+    padding: 10px 20px;
+    border-radius: 15px;
+    font-size: 1.1rem;
+}
+
+button.light {
+    border: 3px solid #1C352D;
+    background-color: #A6B28B;
+    color: #1C352D;
     padding: 10px 20px;
     border-radius: 10px;
     width: 130px;
     cursor: pointer;
     transition: transform 0.2s ease;
+    box-shadow: 0 2px 5px rgba(0,0,0,0.15);
 }
 button:hover {
+    transform: scale(1.15);
+}
+button.dark:hover {
     transform: scale(1.15);
     background-color: #A6B28B;
     color: #1C352D;
     border-color: #A6B28B;
 }
+
+button.light:hover {
+    transform: scale(1.15);
+    background-color: #1C352D;
+    color: #F9F6F3;
+    border-color: #1C352D;
+}
 .theme-changer-div {
-     position: absolute;  /* або relative, якщо треба всередині контейнера */
+     position: absolute;
      bottom: 3%;
      right: 3%;
      border-radius: 50%;
      z-index: 3;
  }
-
-/* перший шар */
 .first-layer {
     position: absolute;
     bottom: 3%;
     right: 3%;
     border-radius: 50%;
-    background-color: #A6B28B;
+    background-color: #F9F6F3;
     z-index: 1;
     padding: 30px;
 }
@@ -102,13 +156,11 @@ button:hover {
 .second-layer:hover {
     background: linear-gradient(to right, rgba(249, 122, 0, 0), #F97A00);
     transform: translateX(15px) rotate(45deg);
-
 }
-/* картинка */
 .theme-changer {
-    position: relative; /* відображається поверх */
+    position: relative;
     z-index: 3;
-    width: 50px; /* підлаштуй розмір */
+    width: 50px;
     height: 50px;
     bottom: 3%;
     right: 10%;
